--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "keycloak-connect": "^6.0.1",
     "keycloak-js": "^6.0.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.14",
