--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.5.14",
     "node-gyp": "^5.0.2",
     "nodemon": "^1.19.1",
+    "request": "^2.88.0",
     "sha256": "^0.2.0",
     "winston": "^2.3.1"
   }
